[package]
name = "simple-nav"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
axum = "0.8.1"
geo = "0.29.3"
osmpbf = "0.3.4"
rstar = "0.12.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = {version = "1.43.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
